Fix contacts on mobile devices
Improve the size and placement of contact circles on mobile devices and desktop

--- a/src/style.css
+++ b/src/style.css
@@ -256,10 +256,10 @@ body {
 
 #contact-section .contact-entry {
     border: 2px solid white;
-    padding: 20px;
+    padding: 15px;
     border-radius: 55px;
     transition: 200ms background-color ease, margin 500ms ease;
-    margin: 10px;
+    margin: 0 10px;
     flex: 1;
 }
 
@@ -272,8 +272,8 @@ body {
 }
 
 #contact-section img {
-    width: 35px;
-    height: 35px;
+    width: 25px;
+    height: 25px;
     filter: invert(1);
     transition: 200ms filter ease;
 }
@@ -349,7 +349,7 @@ body {
     }
     
     .contact-entry {
-        margin: 30px !important;
+        margin: 20px !important;
     }
 }
 
@@ -424,6 +424,7 @@ body {
     }
     
     .contact-entry {
-        margin: 15px 75px !important;
+        margin: 15px 35px !important;
+        padding: 10px !important;
     }
 }
